--- a/frontend/menuAdmin.html
+++ b/frontend/menuAdmin.html
@@ -119,18 +119,30 @@
                                         <label class="form-label">Rol</label>
                                         <div id="roleCheckboxContainer"></div>
                                     </div>
-                                    
+                                    <!-- Estado Activo -->
+                                    <div class="col-md-6 mb-3 justify-content-end">
+                                        <label class="form-label">
+                                            Estado
+                                        </label>
+                                        <div class="form-check form-switch">
+                                            <input class="form-check-input" type="checkbox" id="userActive" checked>
+                                            <label class="form-check-label" for="active">Admin Activo</label>
+                                        </div>
+                                    </div>
                                 </form>
                             </div>
                             <div class="modal-footer">
                                 <div class="d-flex gap-2 flex-wrap">
-                                    <button type="button" class="btn btn-warning-custom" id="btnUpdateUser"><i class="fas fa-edit me-1"></i>Modificar Usuario</button>
+                                    <button type="button" class="btn btn-warning-custom" id="btnUpdateUser"><i
+                                            class="fas fa-edit me-1"></i>Modificar Usuario</button>
                                 </div>
                                 <div class="ms-auto">
-                                    <button class="btn btn-secondary w-100 mt-2" id="btnFormReset"><i class="fas fa-eraser me-1"></i>Limpiar</button>
+                                    <button class="btn btn-secondary w-100 mt-2" id="btnFormReset"><i
+                                            class="fas fa-eraser me-1"></i>Limpiar</button>
                                 </div>
                                 <div class="">
-                                    <button type="button" id="btnCloseUserModal" class="btn btn-secondary w-100 mt-2" data-bs-dismiss="modal"><i class="fas fa-times me-1"></i>Cancelar</button>
+                                    <button type="button" id="btnCloseUserModal" class="btn btn-secondary w-100 mt-2"
+                                        data-bs-dismiss="modal"><i class="fas fa-times me-1"></i>Cancelar</button>
                                 </div>
                             </div>
                         </div>
@@ -336,14 +348,16 @@
                 </div>
             </div>
 
-            <div class="modal fade" id="saleDetailsModal" tabindex="-1" aria-labelledby="saleDetailsModalLabel" aria-hidden="true">
+            <div class="modal fade" id="saleDetailsModal" tabindex="-1" aria-labelledby="saleDetailsModalLabel"
+                aria-hidden="true">
                 <div class="modal-dialog modal-lg">
                     <div class="modal-content">
                         <div class="modal-header">
                             <h5 class="modal-title" id="saleDetailsModalLabel">
                                 <i class="fas fa-receipt me-2"></i>Detalles de la Venta
                             </h5>
-                            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+                            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
+                                aria-label="Close"></button>
                         </div>
                         <div class="modal-body" id="saleDetailsContent">
                             <!-- El contenido se cargará aquí -->
@@ -420,7 +434,7 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/menuAdmin.js"></script>
-    
+
 </body>
 
 </html>
