--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,7 +23,7 @@
         <i class="fas fa-bolt floating-icon" style="top: 30%; right: 5%; font-size: 2.5rem; animation-delay: 5s;"></i>
     </div>
 
-    <div class="container-fluid d-flex align-items-center justify-content-center vh-100 py-5 ">
+    <div class="container-fluid d-flex align-items-center justify-content-center min-vh-100 py-5 ">
         <div class="row w-100 justify-content-center">
             <div class="col-lg-6 col-md-8">
                 <div class="welcome-card p-5">
