--- a/frontend/menuAdmin.html
+++ b/frontend/menuAdmin.html
@@ -154,8 +154,8 @@
                     <div class="table-header">
                         <h3>Lista de Usuarios</h3>
                     </div>
-                    <div class="table-content">
-                        <table id="users-table">
+                    <div class="table-responsive">
+                        <table class="table" id="users-table">
                             <thead>
                                 <tr>
                                     <th>ID</th>
@@ -173,6 +173,7 @@
                     </div>
                 </div>
             </div>
+
             <!-- Productos Section -->
             <div class="content-section" id="productos">
                 <div class="cards-grid">
@@ -306,8 +307,8 @@
                             <i class="fas fa-plus me-2"></i>Crear Producto
                         </button>
                     </div>
-                    <div class="table-content">
-                        <table>
+                    <div class="table-responsive">
+                        <table class="table">
                             <thead>
                                 <tr>
                                     <th>ID</th>
@@ -330,8 +331,8 @@
                     <div class="table-header">
                         <h3>Lista de Pedidos</h3>
                     </div>
-                    <div class="table-content">
-                        <table id="orders-table">
+                    <div class="table-responsive">
+                        <table class="table" id="orders-table">
                             <thead>
                                 <tr>
                                     <th>ID</th>
@@ -409,8 +410,8 @@
                     <div class="table-header">
                         <h3>Registro de Actividades</h3>
                     </div>
-                    <div class="table-content w-100">
-                        <table>
+                    <div class="table-responsive">
+                        <table class="table">
                             <thead>
                                 <tr>
                                     <th>Fecha</th>
