--- a/frontend/products.html
+++ b/frontend/products.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -17,7 +17,7 @@
         <div class="container">
             <div class="logo fade-in">
                 <i class="fas fa-dumbbell"></i>
-                TU SUPLEMENTO
+                TU SUPLEMENTO - Lezcano - Iwach
             </div>
             <div class="nav-actions">
                 <div id="welcomeMessage" class="welcome-message slide-up"></div>
