--- a/frontend/cart.html
+++ b/frontend/cart.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     
     <meta charset="UTF-8">
@@ -20,7 +20,7 @@
             <div class="row align-items-center py-3">
                 <div class="col-md-6">
                     <h2 class="mb-0 logo">
-                        <i class="fas fa-shopping-cart me-2"></i>Tu Carrito
+                        <i class="fas fa-shopping-cart me-2"></i>Tu Carrito - Iwach - Lezcano
                     </h2>
                 </div>
                 <!-- <div class="col-md-6 text-end">
