--- a/frontend/login.html
+++ b/frontend/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iniciar Sesión - Panel Admin</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/frontend/assets/css/login.css">
+    <link rel="stylesheet" href="assets/css/login.css">
     <link rel="icon" href="assets/img/favicon.svg">
 </head>
 <body>
